# smawk

./: .appveyor.yml  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml  prepare-release.yml  publish-crate.yml
benches/: comparison.rs
src/: brute_force.rs  lib.rs  monge.rs  recursive.rs
tests/: agreement.rs  complexity.rs  version-numbers.rs
tests/random_monge/: mod.rs
