[package]
name = "smawk"
version = "0.3.0"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Functions for finding row-minima in a totally monotone matrix."
repository = "https://github.com/mgeisler/smawk"
readme = "README.md"
keywords = ["smawk", "matrix", "optimization", "dynamic-programming"]
categories = ["algorithms", "science"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "mgeisler/smawk" }
appveyor = { repository = "mgeisler/smawk" }
codecov = { repository = "mgeisler/smawk" }

[dependencies]
ndarray = { version = "0.14", optional = true }

[dev-dependencies]
version-sync = "0.9"
num-traits = "0.2"
rand = "0.7"
rand_chacha = "0.2"
